# event_mannagment_system

./: .gitignore  Assignment-02.md  README.md  db.sqlite3  main.py  manage.py  package.json  pyproject.toml  requirements.txt  steps.md  tailwind.config.js  vercel.json
event__mannagment_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
events/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_initial.py
events/templates/: canceal-rsvp.html  category-form.html  category-list.html  event-delete.html  event-detail.html  event-form.html  event-list.html  participant-form.html  rsvp-form.html  search-result.html
static/css/: output.css
staticfiles/css/: output.css
staticfiles/js/: base.js  utils.js
templates/: base.html  events.html  home.html  no-permission.html  participants.html  search.html
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: edit-profile.html  login.html  password-change-done.html  password-change.html  password-reset-complete.html  password-reset-confirm.html  password-reset-done.html  password_reset_email.html  profile.html  register.html  reset-password.html
users/templates/dashboard/: organizer-dashboard.html  participant-dashboard.html
users/templates/dashboard/admin/: admin-base.html  admin-dashboard.html  assign-role.html  create-group.html  group-list.html  users.html
utils/: auth.py
