[project]
name = "event-mannagment-system-phitron-sdp-asgmt-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=3.0.0",
    "django>=5.2.3",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.11.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
